DEV6_Componentslist/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Phone_Number__c</fullName>
        <label>Alternative Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Couples</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Sort_Code__c</fullName>
        <label>Bank Sort Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Phone_Number__c</fullName>
        <label>Best Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BookingKey__c</fullName>
        <label>BookingKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Identifier__c</fullName>
        <label>Booking Identifier</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Regarding course cancellation reason</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low bookings - 0 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 1 booking</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 2 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 3 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 4 or more bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - client not happy with small group size</fullName>
                </value>
                <value>
                    <fullName>Practitioner on time out - no replacement available</fullName>
                </value>
                <value>
                    <fullName>Practitioner resigned - no replacement available</fullName>
                </value>
                <value>
                    <fullName>Practitioner withdrew - no LtP</fullName>
                </value>
                <value>
                    <fullName>Practitioner withdrew - other</fullName>
                </value>
                <value>
                    <fullName>Newly Qualified practitioner withdrew - no LtP</fullName>
                </value>
                <value>
                    <fullName>Newly Qualified practitioner withdrew - other</fullName>
                </value>
                <value>
                    <fullName>Over capacity</fullName>
                </value>
                <value>
                    <fullName>Service withdrawn</fullName>
                </value>
                <value>
                    <fullName>Course added in error</fullName>
                </value>
                <value>
                    <fullName>Private sessions cancelled by client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>To work around known Lightning issue with contact fields on related lists - https://success.salesforce.com/issues_view?id=a1p30000000jd3OAAQ</description>
        <formula>Client__r.FirstName + &apos; &apos; +  Client__r.LastName</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Booking</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Companion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Bookings_as_Companion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_DD_Authorisation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm DD Authorisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseKey__c</fullName>
        <label>CourseKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Payment_Method__c</fullName>
        <label>Course Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I wish to pay for the course fees in 2 monthly installments by Direct Debit</fullName>
                </value>
                <value>
                    <fullName>I wish to pay for the course fees in 3 monthly installments by Direct Debit</fullName>
                </value>
                <value>
                    <fullName>I wish to pay for the course fees in 4 monthly installments by Direct Debit</fullName>
                </value>
                <value>
                    <fullName>I wish to pay for the course fees by credit or debit card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Booking</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit</label>
        <referenceTo>Direct_Debits__c</referenceTo>
        <relationshipLabel>Course Booking</relationshipLabel>
        <relationshipName>Course_Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <label>Discount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under 18</fullName>
                </value>
                <value>
                    <fullName>Student (Under 22)</fullName>
                </value>
                <value>
                    <fullName>Income support</fullName>
                </value>
                <value>
                    <fullName>Income-based job seekers allowance</fullName>
                </value>
                <value>
                    <fullName>Income related employment and support allowance</fullName>
                </value>
                <value>
                    <fullName>Working tax credit</fullName>
                </value>
                <value>
                    <fullName>Support under part VI of the Immigration and Asylum Act 1999</fullName>
                </value>
                <value>
                    <fullName>Universal Credit</fullName>
                </value>
                <value>
                    <fullName>Household income &lt; £16.19K</fullName>
                </value>
                <value>
                    <fullName>Household income &lt; £28.19K</fullName>
                </value>
                <value>
                    <fullName>Last Minute Offer</fullName>
                </value>
                <value>
                    <fullName>Booked after start of course</fullName>
                </value>
                <value>
                    <fullName>Referral - in lieu of venue hire</fullName>
                </value>
                <value>
                    <fullName>BB Single Occupancy</fullName>
                </value>
                <value>
                    <fullName>Other - see notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Include_on_Class_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Include on Class List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Further_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do Not Send Further Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Baby__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Baby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>First Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Booking (First Contact)</relationshipLabel>
        <relationshipName>Course_Booking</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Heard__c</fullName>
        <label>First Heard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friends and Family</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_heared__c</fullName>
        <label>How heared</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GOOGLE</fullName>
                </value>
                <value>
                    <fullName>LINKEDIN</fullName>
                </value>
                <value>
                    <fullName>TWITTER</fullName>
                </value>
                <value>
                    <fullName>FACEBOOK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <label>Include</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Choice__c</fullName>
        <label>Membership Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Membership_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Payment_Method__c</fullName>
        <label>Membership_Payment_Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I wish to pay my membership by Direct Debit</fullName>
                </value>
                <value>
                    <fullName>I wish to pay my membership by credit or debit card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nct_may_contact__c</fullName>
        <label>Nct may contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_3rd_Party_Mailings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>No 3rd Party Mailings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Email_Sent__c</fullName>
        <label>Offer Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Membership__c</fullName>
        <label>Partner Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Joint membership for you and your partner</fullName>
                </value>
                <value>
                    <fullName>Individual membership just for you</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card(£57)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£9.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£57)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£48)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£12 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£48)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£120)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£120)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£10)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£ 2.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£ 10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>Client__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Date__c</fullName>
        <label>Preferred Payment Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesdemo__c</fullName>
        <description>Display test of picklist</description>
        <inlineHelpText>Picklist demo</inlineHelpText>
        <label>Salesdemo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Booking (Contact)</relationshipLabel>
        <relationshipName>Course_Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Enquiry - Parent has enquired about the course

Reserved - PSA has accepted the enquiry and reserves a place for the parent

Installment -  Parents are paying by installments as long as the first payment / deposit is made. 
In case of direct debits; as long as the direct debit is set up the status of booking shows confirmed even if the first payment is not taken

Paid - All the payments for the course have been paid.

Cancelled - Parent has cancelled their booking

Transferred - Parent has transferred the booking to different course

Lapsed - This is when the reserve by date for a booking has lapsed

Waiting - This is when parents are added onto a waiting list when their choice of course or the most suitable one is fully booked</description>
        <label>Booking Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelling</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_party_may_contact__c</fullName>
        <label>Third party may contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twins_or_more__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Twins or more</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <formula>Course__r.Venue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Address</label>
        <type>Text</type>
    </fields>
    <label>Course Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>First_Contact__c</columns>
        <columns>Booking_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Enquiries</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Enquiry</value>
        </filters>
        <label>All Enquiries</label>
    </listViews>
    <listViews>
        <fullName>Enquiries</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Offer_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Enquiries</label>
    </listViews>
    <listViews>
        <fullName>UnPaid_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Installment</value>
        </filters>
        <label>UnPaid Courses</label>
        <sharedTo>
            <group>Capacity_PSA_Group</group>
            <group>Enquiry_PSA_group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BK-{000000}</displayFormat>
        <label>Course Booking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Booking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Reason_Mandatory_for_Cancelled_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Status__c , &apos;Cancelled&apos;) , ISPICKVAL( Cancellation_Reason__c, &apos;&apos; ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please provide the reason for Cancellation when Status as Cancelled</errorMessage>
    </validationRules>
</CustomObject>